# artifactvirtual

./: .drafts  .env.dev  .gitignore  ARTIFACTVIRTUAL_AUDIT_REPORT.md  AVA.ipynb  AVA.py  AVOL10  CODE_OF_CONDUCT.md  CONTEXT_ARTIFACT_VIRTUAL.md  CONTRIBUTING.md  CONTRINBUTING.Mmd  LICENSE  Primary_and_Virtual_Hardware_Specs.md  README.md  WHITEPAPER.md  artifact_systemmapping.md  artifacts_systemmapping.md  azure-pipelines-1.yml  azure-pipelines-2.yml  cockpit.py  firstreview  license  package-lock.json  package.json  rag_config.py  reflect.core  requirements.txt  roadmap.html  setup.py  startup.py  utils_stt.py  utils_tts.py  web_chat_server.py  workspace_rag.py
.devcontainer/: Dockerfile  README.md  bootstrap  bootstrap.sh  devcontainer.json  docker-compose.yml  first-run-notice.txt
.reports/: codebase-refactor-summary  enterprise-audit-report
.startup/: autoround_init.py  check_system.py  install_deps.py  ollama_boot.py  readme.md  system_status.json  welcome_prompt.py
__thoughtprocess/: .blueprints
_thoughtprocess/: .blueprint  .blueprints  .drafts  .notes  _drafts
angular2/: README.md  angular.json  package.json
av-next/: package-lock.json  package.json
bootcamp/: COMMANDS_COMPILATION.md  LLM_SYSTEM_MANUAL.md  (+14 more)
projects/bedrock/rust/: Cargo.toml
projects/bedrock/rust/src/: lib.rs
projects/bedrock/rust/src/common/: mod.rs
projects/bedrock/rust/src/ethereum/: client.rs  mod.rs  types.rs  utils.rs
projects/bedrock/rust/src/solana/: client.rs  mod.rs  types.rs  utils.rs
projects/bedrock/rust/src/utils/: crypto.rs  encoding.rs  logging.rs  mod.rs
(+527 files in other folders)
